--- a/Text-Summarization-NLP-Project-main/research/Text_Summarization.ipynb
+++ b/Text-Summarization-NLP-Project-main/research/Text_Summarization.ipynb
@@ -392,8 +392,8 @@
    "source": [
     "# #dowload & unzip data\n",
     "\n",
-    "# !wget https://github.com/entbappy/Branching-tutorial/raw/master/summarizer-data.zip\n",
-    "# !unzip summarizer-data.zip"
+    "!wget https://github.com/entbappy/Branching-tutorial/raw/master/summarizer-data.zip\n",
+    "!unzip summarizer-data.zip"
    ]
   },
   {
@@ -410,7 +410,7 @@
    "source": [
     "\n",
     "\n",
-    "dataset_samsum = load_from_disk('C:/Users/nanandas/Cert Work/Project/Text-Summarization-NLP-Project-main/Text-Summarization-NLP-Project-main/summarizer-data/samsum_dataset')\n",
+    "dataset_samsum = load_from_disk('samsum_dataset')\n",
     "dataset_samsum"
    ]
   },
